Added Favicon. Put links instead of hardcoded paths for images in index and header.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,5 @@
     {% endif %}
     </div>
     <div class="col-lg-6 title-image-div">
-      <img class="title-image" src="static/images/to-do-list.png" height="250" width="250" alt="To-Do">
+      <img class="title-image" src="{{ url_for('static', filename='to-do-list.png') }}" height="250" width="250" alt="To-Do">
     </div>
