--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
     <!-- css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/to-do.css') }}">
     <!--Favicons-->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/images/favicon.ico') }}">
     <!-- icons -->
     <script src="https://kit.fontawesome.com/00a5c407e7.js" crossorigin="anonymous"></script>
     <!--    fonts-->
@@ -27,7 +27,7 @@
         <a class="navbar-brand" href="#">
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="{{ url_for('static', filename='gtofficial.jpg') }}" alt="" height="50" width="50">
+              <img src="{{ url_for('static', filename='/images/gtofficial.jpg') }}" alt="" height="50" width="50">
             </div>
             <div class="flex-grow-1 ms-3">
               Green Tea
