--- a/templates/main_application.html
+++ b/templates/main_application.html
@@ -17,7 +17,7 @@
             <h5>{{ task.task }}</h5>
         </div>
         <div class="col">
-            <a href="{{ url_for('delete_task', id=task.id) }}"><i class="fa-solid fa-trash-can"></i></a>
+            <a href="{{ url_for('delete_task', tsk_id=task.id) }}"><i class="fa-solid fa-trash-can"></i></a>
         </div>
       </div><br>
     {% endif %}
