--- a/templates/header.html
+++ b/templates/header.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
               <img src="{{ url_for('static', filename='/images/gtofficial.jpg') }}" alt="" height="50" width="50">
